# PMT

./: .gitignore  README.md  Taskfile.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts
backend/: .env.local  Dockerfile  README.md  api.py  constants.py  database.py  db.py  models.py  pyproject.toml  utils.py  views.py
backend/legacy/: Dockerfile  _country_codes.py  constants.py  models_engine.py  pyproject.toml  utils.py  views.py
backend/legacy/models/: client.py  project.py  project_client.py  survey.py
backend/legacy/routes/: countries.py  project.py  project_clients.py  survey.py
backend/models/: client.py  project.py  project_client.py  survey.py
backend/ptm/: pyproject.toml
backend/ptm/app/: models.py  urls.py
backend/ptm/ptm/: asgi.py  settings.py  urls.py
backend/routes/: client.py  countries.py  project.py  project_clients.py  survey.py
backend/src/: create_admin.py  entrypoint.sh  start.sh
backend/src/app/: _country_codes.py  admin.py  api.py  models.py  template_urls.py  urls.py  utils.py  validators.py  views.py
backend/src/app/migrations/: 0001_initial.py  0002_alter_projectcreation_loi.py  0002_alter_projectcreation_selected_div_projectvendor.py  0002_rename_client_email_client_email_and_more.py  0003_alter_projectcreation_loi.py  0003_projectcode_vendor_alter_projectclient_scope_and_more.py  0003_remove_projectcreation_scope.py  0003_rename_selected_div_projectcreation_methodology_and_more.py  0004_alter_projectcreation_loi.py  0004_projectclient_index_key_and_more.py  0004_projectsurveytrace.py  0004_projectvendor_vendor_name_and_more.py  0005_alter_projectvendor_vendor_name.py  0005_projectclient_index_key_and_more.py  0005_rename_county_code_projectsurveytrace_country_code.py  0006_alter_projectsurveytrace_ip_proxy_and_more.py  0006_projectvendor_index_key_and_more.py  (+18 more)
backend/src/ptm/: settings.py  urls.py  wsgi.py
backend/test/: client.py  const.py  test_client.py  test_project.py  test_project_client.py  test_vendor.py  test_vendor_creation.py
(+176 files in other folders)
