[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Rishang <>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
pydantic = "^2.5.3"
pymongo = "^4.6.1"
requests = "^2.31.0"
rich = "^13.7.0"
uvicorn = "^0.25.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
faker = "^21.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
